--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class=" ms-auto">
             <ul class=" d-flex justify-content-end align-items-center">
-                <li><a href="login-page.html" class="active">Login</a></li>
+                <li><a href="login-page.html" class="">Login</a></li>
                 <li><a href="#" class="">/Register</a></li>
                 <div class="ms-3">
                 <select class="form-select" aria-label="Default select example">
