--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="container">
         <div class=" ms-auto">
             <ul class=" d-flex justify-content-end align-items-center">
-                <li><a href="login-page.html" class="">Login</a></li>
-                <li><a href="#" class="">/Register</a></li>
+                <li><a href="login-page.html" class="login-i">Login</a></li>
+                <li><a href="#" class="register-i">/Register</a></li>
                 <div class="ms-3">
                 <select class="form-select" aria-label="Default select example">
                     <option selected>English</option>
@@ -40,7 +40,7 @@
         <div class="container">
           <a class="navbar-brand "><img src="assets/img/logo/Group 34437@2x.png" alt=""></a>
           <div class="d-flex" >
-            <p class="nav-title">Imputabiliteafro expert platform</p>
+            <p class="nav-title"> Imputabiliteafro expert platform </p>
           </div>
         </div>
       </nav>
