--- a/login-page.html
+++ b/login-page.html
@@ -25,8 +25,8 @@
         <div class="container">
             <div class=" ms-auto">
                 <ul class=" d-flex justify-content-end align-items-center">
-                    <li><a href="login-page.html" class="active">Login</a></li>
-                    <li><a href="#" class="">/Register</a></li>
+                    <li><a href="login-page.html" class="login-i active">Login</a></li>
+                    <li><a href="#" class="login-i">/Register</a></li>
                     <div class="ms-3">
                         <select class="form-select" aria-label="Default select example">
                             <option selected>English</option>
@@ -38,7 +38,7 @@
             </div>
         </div>
     </header>
-
+<div class="sticky-top">
     <nav class="navbar   nvabar-setion">
         <div class="container">
             <a class="navbar-brand "><img src="assets/img/logo/Group 34437@2x.png" alt=""></a>
@@ -47,24 +47,24 @@
             </div>
         </div>
     </nav>
-
+</div>
     <div class="loging-page-section">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-7 col-md-6 col-sm-12 left-contain">
+                <div class="col-lg-7 col-md-7 col-sm-12 left-contain">
                     <div class="text-container">
                         <p class="text-title">Welcome to <span> Imputabiliteafro expert </span> platform.</p>
                         <p class="info-title">Login / register to continue.</p>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-6 col-sm-12 right-contain">
+                <div class="col-lg-5 col-md-5 col-sm-12 right-contain">
                     <div class="from-section">
                         <form action="">
                             <input type="text" placeholder="Enter username / email address" class="w-100 input-text"
                                 required>
                             <input type="password" name="" placeholder="Enter password" id="" class="w-100 input-text"
                                 required>
-                            <div class="text-end">
+                            <div class="text-end mt-2">
 
                                 <a href="#" class="underline ">Forgot password?</a>
                             </div>
@@ -72,7 +72,7 @@
 
                             <div class="d-flex justify-content-between align-items-center mt-2 ">
                                 <button class="btn-sing-in">Sing in </button>
-                                <p class="Registe-text">Not a member? <a href="#" class="underline  "> Register now </a>
+                                <p class="Registe-text">Not a member? <a href="#" class="underline  "> Register  </a>
                                 </p>
                             </div>
                         </form>
