--- a/News-blog-page.html
+++ b/News-blog-page.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
+<!-- font-awesome icon link -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 
@@ -20,99 +22,111 @@
 </head>
 
 <body>
+  <!-- header section Start -->
+  <header>
+    <div class="container">
+        <div class=" ms-auto">
+            <ul class=" d-flex justify-content-end align-items-center">
+                <li><a href="#" class="contact-admin">Contact admin</a></li>
+                <li class="ms-3">
+                    <div class="dropdown">
 
-    <header>
-        <div class="container">
-            <div class=" ms-auto">
-                <ul class=" d-flex justify-content-end align-items-center">
-                    <li><a href="#" class="contact-admin">Contact admin</a></li>
-                    <li class="ms-3">
-                        <div class="dropdown">
+                        <div class="  dropdown-toggle user-dropdown" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <div class="user-icon"><img src="assets/img/icon/user.png" alt=""> </div> Welcome Mr.
+                            Persons Name
 
-                            <div class="  dropdown-toggle user-dropdown" type="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                <div class="user-icon"><img src="assets/img/icon/user.png" alt=""> </div> Welcome Mr.
-                                Persons Name
-
-                            </div>
-                            <ul class="dropdown-menu user-dropdown-menu">
-                                <li><a class="dropdown-item" href="#">View profile</a></li>
-                                <li><a class="dropdown-item" href="#">Edit profile</a></li>
-                                <li><a class="dropdown-item" href="#">View Members</a></li>
-                                <li><a class="dropdown-item" href="#">Country/Community</a></li>
-                                <li><a class="dropdown-item" href="#">Logout</a></li>
-                            </ul>
                         </div>
-                    </li>
-                    <div class="ms-3">
-                        <select class="form-select" aria-label="Default select example">
-                            <option selected>English</option>
-                            <option>English</option>
-                            <option>English</option>
-                        </select>
+                        <ul class="dropdown-menu user-dropdown-menu">
+                            <li><a class="dropdown-item" href="#">View profile</a></li>
+                            <li><a class="dropdown-item" href="#">Edit profile</a></li>
+                            <li><a class="dropdown-item" href="#">View Members</a></li>
+                            <li><a class="dropdown-item" href="#">Country/Community</a></li>
+                            <li><a class="dropdown-item" href="#">Logout</a></li>
+                        </ul>
                     </div>
-                </ul>
-            </div>
-        </div>
-    </header>
-
-    <nav class="navbar   nvabar-setion">
-        <div class="container">
-            <a class="navbar-brand "><img src="assets/img/logo/Group 34437@2x.png" alt=""></a>
-            <div class="d-flex">
-                <p class="nav-title"> Imputabiliteafro expert platform </p>
-            </div>
-        </div>
-    </nav>
-    <div class="navbar navbar-expand-lg secondary-menu-section">
-        <div class="container">
-            <div class="col-lg-4">
-                <select class="form-select select-menu-box  w-100" aria-label="Default select ">
-                    <option> Select Spaces</option>
-                    <option value="1"><a href="#"> Global</a></option>
-                    <option value="2"><a href="#">Community 1 </a></option>
-                    <option value="3" selected><a href="#"> Algeria </a></option>
-                </select>
-            </div>
-            <div class="navbar-toggler "  data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <!-- <span class="navbar-toggler-icon"></span> -->
-                <iconify-icon icon="ci:menu-alt-05"></iconify-icon>
-        </div>
-            <div class="collapse navbar-collapse col-lg-8" id="navbarSupportedContent">
-                <ul class="navbar-nav  mb-2 mb-lg-0 ">
-
-                    <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="Documents-page.html">
-                            <div class="logo-img"><img src="assets/img/icon/book.svg" alt=""></div><span> Documents
-                            </span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="News-page.html"><iconify-icon
-                                icon="fa6-solid:newspaper"></iconify-icon><span> News</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Event-page.html"><iconify-icon icon="mdi:location"></iconify-icon><span>
-                                Events</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Discussion-page.html">
-                            <div class="logo-img"><img src="assets/img/icon/Discus.svg" alt=""></div><span> Discussion
-                                forum</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Quiz-page.html">
-                            <div class="logo-img"><img src="assets/img/icon/quiz.svg" alt=""></div><span> Quiz</span>
-                        </a>
-                    </li>
-                </ul>
-
-            </div>
+                </li>
+                <div class="ms-3">
+                    <select class="form-select" aria-label="Default select example">
+                        <option selected>English</option>
+                        <option>English</option>
+                        <option>English</option>
+                    </select>
+                </div>
+            </ul>
         </div>
     </div>
+</header>
+<!-- header section end -->
+
+<div class="sticky-top"> 
+<!-- nvabar-setion start -->
+<nav class="navbar   nvabar-setion">
+    <div class="container">
+        <a class="navbar-brand "><img src="assets/img/logo/Group 34437@2x.png" alt=""></a>
+        <div class="d-flex">
+            <p class="nav-title"> Imputabiliteafro expert platform </p>
+        </div>
+    </div>
+</nav>
+<!-- nvabar-setion End -->
+<!-- secondary-menu-section start -->
+<div class="navbar navbar-expand-lg secondary-menu-section">
+    <div class="container">
+        <div class="col-lg-4 col-md-4 ">
+            <div class="dropdown  dropdown-section">
+                <div class=" dropdown-toggle dropdown-title " data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <span>  Select Spaces </span>
+                    <span class="ms-auto icon-box"><iconify-icon 
+                            icon="teenyicons:up-solid" class="up-down-arro"></iconify-icon></span>
+                </div>
+                <ul class="dropdown-menu ">
+                    <li><a class="dropdown-item" href="#">Global </a></li>
+                    <li><a class="dropdown-item" href="#">Community 1</a></li>
+                    <li><a class="dropdown-item" href="#">Algeria</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="navbar-toggler " data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <!-- <span class="navbar-toggler-icon"></span> -->
+            <iconify-icon icon="ci:menu-alt-05"></iconify-icon>
+        </div>
+        <div class="collapse navbar-collapse col-lg-8" id="navbarSupportedContent">
+            <ul class="navbar-nav menu-iteam  mb-2 mb-lg-0 ">
+
+                <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="Documents-page.html">
+                        <div class="logo-img"><i class="fa-solid fa-book"></i></div><span> Documents
+                        </span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="News-page.html"><div class="logo-img"> <i class="fa-solid fa-newspaper"></i></div><span> News</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="Event-page.html"><div class="logo-img"> <i class="fa-solid fa-location-dot"></i></div><span>
+                            Events</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Discussion-page.html">
+                        <div class="logo-img"><i class="fa-solid fa-comments"></i></div><span> Discussion
+                            forum</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Quiz-page.html">
+                        <div class=" logo-img"><i class="fa-solid fa-chart-simple"></i></div><span> Quiz</span>
+                    </a>
+                </li>
+            </ul>
+
+        </div>
+    </div>
+</div>
+<!-- secondary-menu-section End -->
+</div>
 
 
     <section class="News-blog-page-setion">
@@ -172,14 +186,16 @@
                         <div class="baner-img">
                             <img src="assets/img/all/childern/Mask Group 9@2x.png" alt="">
                         </div>
-                        <div class="d-flex mt-2">
-                            <h3 class="">News title will come here news title will come here</h3>
-                             <div class=" text-end btn-box"><a href="# " ><button class="button Download-btn">Download PDF</button></a></div>
+                        <div class="d-flex justify-content-between mt-2 align-items-center">
+                            <a class="main-title">News title will come here news title will come here</a>
+                            <div class=" text-end btn-box"><a href="# "><button class="button Download-btn">Download
+                                        PDF</button></a></div>
                         </div>
                         <div>
                             <p class="date">20/02/2023</p>
                         </div>
-                        <article class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis delectus, dolor tenetur
+                        <article class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+                            delectus, dolor tenetur
                             iure, quasi asperiores exercitationem excepturi similique modi deserunt deleniti aspernatur
                             magnam placeat ea. Placeat sapiente facere similique eligendi? Lorem ipsum dolor sit amet
                             consectetur, adipisicing elit. Tenetur, accusantium numquam reiciendis maxime hic totam, vel
@@ -187,7 +203,8 @@
                             necessitatibus delectus?</article>
                         <div class="d-flex row">
                             <div class="col-md-6  col-sm-12">
-                                <article class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatibus
+                                <article class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Placeat voluptatibus
                                     hic eum temporibus, itaque reprehenderit sint sunt explicabo, voluptatem neque in
                                     nobis odit sed! Ab sit animi voluptate corporis? Voluptates! Lorem ipsum dolor sit
                                     amet consectetur adipisicing elit. Temporibus tenetur, nesciunt aspernatur, aperiam
@@ -201,7 +218,8 @@
                             </div>
                         </div>
                         <div>
-                            <article class="info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur laudantium
+                            <article class="info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+                                laudantium
                                 architecto ex, excepturi, id error quisquam quibusdam dignissimos, nulla rem dolores.
                                 Minima porro quaerat, rerum rem quis animi veritatis ipsum? Lorem ipsum dolor sit amet
                                 consectetur adipisicing elit. Ad, repellat veniam? Eveniet corporis harum ipsa quas
@@ -209,7 +227,8 @@
                                 nesciunt et vero autem ad?</article>
                         </div>
                         <div>
-                            <article class="info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur laudantium
+                            <article class="info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+                                laudantium
                                 architecto ex, excepturi, id error quisquam quibusdam dignissimos, nulla rem dolores.
                                 Minima porro quaerat, rerum rem quis animi veritatis ipsum? Lorem ipsum dolor sit amet
                                 consectetur adipisicing elit. Ad, repellat veniam? Eveniet corporis harum ipsa quas
@@ -217,9 +236,15 @@
                                 nesciunt et vero autem ad?</article>
                         </div>
 
-                        <div class="pre-next-setion">
-                            <div><p  class="preview-tile active"><< Previous</p></div>
-                            <div><p  class="next-title">Next >></p></div>
+
+                    </div>
+                    <div class="pre-next-setion">
+                        <div>
+                            <p class="preview-tile active">
+                                << Previous</p>
+                        </div>
+                        <div>
+                            <p class="next-title">Next >></p>
                         </div>
                     </div>
                 </div>
@@ -228,17 +253,21 @@
 
     <footer>
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-6 col-md-6 col-sm-6">
+            <div class="d-flex align-items-center justify-content-between">
+                <div class="col-lg-4 col-md-4 col-sm-6 ">
+                    <div class="text-center">
                     <a href="#" class="connect-info">connect with us</a>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-6">
+                </div>
+                <div class="col-lg-8 col-md-8 col-sm-6">
+                    <div>
                     <ul class="footer-icon-box">
-                        <li class="icon"><a href="#"><iconify-icon icon="mdi:twitter"></iconify-icon></a></li>
-                        <li class="icon"><a href="#"><iconify-icon icon="mdi:youtube"></iconify-icon></a></li>
-                        <li class="icon"><a href="#"><iconify-icon icon="mdi:linkedin"></iconify-icon></a></li>
-                        <li class="icon icon-info"><a href="#"><iconify-icon icon="bi:wifi-2"></iconify-icon></a></li>
+                        <li class="icon"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                        <li class="icon"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li class="icon"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                        <li class="icon"><a href="#"><i class="fa-solid fa-rss"></i></a></li>
                     </ul>
+                    </div>
                 </div>
             </div>
         </div>
