--- a/News-page.html
+++ b/News-page.html
@@ -187,7 +187,7 @@
                             <div class="col-lg-6 col-md-6 col-sm-12 ">
                                 <div class="card card-box">
                                     <a href="News-blog-page.html"><img src="assets/img/all/childern/Mask Group 9.png"
-                                            class="card-img-top" alt="..."></a>
+                                             alt="..."></a>
                                     <div class="card-body">
                                         <p class="date">20/02/2023</p>
                                         <a href="News-blog-page.html">
@@ -201,7 +201,7 @@
                             <div class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="card card-box">
                                     <a href="News-blog-page.html"><img src="assets/img/all/childern/Mask Group 9.png"
-                                            class="card-img-top" alt="..."></a>
+                                             alt="..."></a>
                                     <div class="card-body">
                                         <p class="date">20/02/2023</p>
                                         <a href="News-blog-page.html">
@@ -215,7 +215,7 @@
                             <div class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="card card-box">
                                     <a href="News-blog-page.html"><img src="assets/img/all/childern/Mask Group 9.png"
-                                            class="card-img-top" alt="..."></a>
+                                             alt="..."></a>
                                     <div class="card-body">
                                         <p class="date">20/02/2023</p>
                                         <a href="News-blog-page.html">
@@ -229,7 +229,7 @@
                             <div class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="card card-box">
                                     <a href="News-blog-page.html"><img src="assets/img/all/childern/Mask Group 9.png"
-                                            class="card-img-top" alt="..."></a>
+                                             alt="..."></a>
                                     <div class="card-body">
                                         <p class="date">20/02/2023</p>
                                         <a href="News-blog-page.html">
@@ -243,7 +243,7 @@
                             <div class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="card card-box">
                                     <a href="News-blog-page.html"><img src="assets/img/all/childern/Mask Group 9.png"
-                                            class="card-img-top" alt="..."></a>
+                                             alt="..."></a>
                                     <div class="card-body">
                                         <p class="date">20/02/2023</p>
                                         <a href="News-blog-page.html">
@@ -257,7 +257,7 @@
                             <div class="col-lg-6 col-md-6 col-sm-12">
                                 <div class="card card-box">
                                     <a href="News-blog-page.html"><img src="assets/img/all/childern/Mask Group 9.png"
-                                            class="card-img-top" alt="..."></a>
+                                             alt="..."></a>
                                     <div class="card-body">
                                         <p class="date">20/02/2023</p>
                                         <a href="News-blog-page.html">
