--- a/News-blog-page.html
+++ b/News-blog-page.html
@@ -202,7 +202,7 @@
                             ex ducimus labore atque vitae ea iusto corrupti. Dolorem sapiente possimus totam
                             necessitatibus delectus?</article>
                         <div class="d-flex row">
-                            <div class="col-md-6  col-sm-12">
+                            <div class="col-lg-6 col-md-12    col-sm-12">
                                 <article class="info-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     Placeat voluptatibus
                                     hic eum temporibus, itaque reprehenderit sint sunt explicabo, voluptatem neque in
@@ -211,7 +211,7 @@
                                     veniam vitae, possimus suscipit aut repellendus voluptatibus porro deleniti
                                     accusantium sapiente ducimus et. Consequuntur natus laboriosam corrupti?</article>
                             </div>
-                            <div class="col-sm-12 col-md-6">
+                            <div class="col-lg-6 col-md-12    col-sm-12">
                                 <div class="img-box">
                                     <img src="assets/img/all/childern/Mask Group 9@2x.png" alt="">
                                 </div>
