--- a/Documents-page.html
+++ b/Documents-page.html
@@ -241,7 +241,7 @@
                                 <div class="number-cards col-1">1</div>
                                 <div class="col-11">
                                     <div class="py-2">
-                                    <a href="#" class="Doc-card-title">Case ID 24 digits will come here</a>
+                                    <a href="Document-details page.html" class="Doc-card-title">Case ID 24 digits will come here</a>
                                     </div>
                                     <div class="Doc-card-info">
                                         <p>Sample text will come here Sample text will come here Sample text will come
@@ -265,7 +265,7 @@
                                 <div class="number-cards col-1">2</div>
                                 <div class="col-11">
                                     <div class="py-2">
-                                        <a href="#" class="Doc-card-title">Case ID 24 digits will come here</a>
+                                        <a href="Document-details page.html" class="Doc-card-title">Case ID 24 digits will come here</a>
                                         </div>
 
                                     <div class="Doc-card-info">
@@ -290,7 +290,7 @@
                                 <div class="number-cards col-1">3</div>
                                 <div class="col-11">
                                     <div class="py-2">
-                                        <a href="#" class="Doc-card-title">Case ID 24 digits will come here</a>
+                                        <a href="Document-details page.html" class="Doc-card-title">Case ID 24 digits will come here</a>
                                         </div>
 
                                     <div class="Doc-card-info">
@@ -315,7 +315,7 @@
                                 <div class="number-cards col-1">4</div>
                                 <div class="col-11">
                                     <div class="py-2">
-                                        <a href="#" class="Doc-card-title">Case ID 24 digits will come here</a>
+                                        <a href="Document-details page.html" class="Doc-card-title">Case ID 24 digits will come here</a>
                                         </div>
 
                                     <div class="Doc-card-info">
@@ -340,7 +340,7 @@
                                 <div class="number-cards col-1">5</div>
                                 <div class="col-11">
                                     <div class="py-2">
-                                        <a href="#" class="Doc-card-title">Case ID 24 digits will come here</a>
+                                        <a href="Document-details page.html" class="Doc-card-title">Case ID 24 digits will come here</a>
                                         </div>
                                     <div class="Doc-card-info">
                                         <p>Sample text will come here Sample text will come here Sample text will come
@@ -364,7 +364,7 @@
                                 <div class="number-cards col-1">6</div>
                                 <div class="col-11">
                                     <div class="py-2">
-                                        <a href="#" class="Doc-card-title">Case ID 24 digits will come here</a>
+                                        <a href="Document-details page.html" class="Doc-card-title">Case ID 24 digits will come here</a>
                                         </div>
 
                                     <div class="Doc-card-info">
@@ -407,7 +407,7 @@
             <div class="d-flex align-items-center justify-content-between">
                 <div class="col-lg-4 col-md-4 col-sm-6 ">
                     <div class="text-center">
-                    <a href="#" class="connect-info">connect with us</a>
+                    <a href="#" class="connect-info">Connect with us</a>
                 </div>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-6">
