--- a/News-page.html
+++ b/News-page.html
@@ -288,7 +288,7 @@
             <div class="d-flex align-items-center justify-content-between">
                 <div class="col-lg-4 col-md-4 col-sm-6 ">
                     <div class="text-center">
-                    <a href="#" class="connect-info">connect with us</a>
+                    <a href="#" class="connect-info">Connect with us</a>
                 </div>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-6">
