--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="container">
                 <div class=" ms-auto">
                     <ul class=" d-flex justify-content-end align-items-center">
-                        <li><a href="login-page.html" class="login-i active">Login</a></li>
+                        <li><a href="Documents-page.html" class="login-i active">Login</a></li>
                         <li><a href="#" class="login-i">/Register</a></li>
                         <div class="ms-3">
                             <select class="form-select" aria-label="Default select example">
