--- a/News-blog-page.html
+++ b/News-blog-page.html
@@ -184,7 +184,7 @@
                 <div class="col-lg-8 col-md-8 col-sm-12 order-1 order-lg-2  order-md-2">
                     <div class="all-blog-contain">
                         <div class="baner-img">
-                            <img src="assets/img/all/childern/Mask Group 9@2x.png" alt="">
+                            <img src="assets/img/all/full-img.png" alt="">
                         </div>
                         <div class="d-flex justify-content-between mt-2 align-items-center">
                             <a class="main-title">News title will come here news title will come here</a>
