--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                         <div class="from-section">
                             <form id="loginForm" action="">
                                 <input type="text" id="username" placeholder="Enter username / email address"
-                                    class="w-100 input-text" required>
+                                    class="w-100 input-text" >
                                 <input type="password" id="password" placeholder="Enter password" class="w-100 input-text"
-                                    required>
+                                    >
                                 <div class="text-end mt-2">
                                     <a href="#" class="underline">Forgot password?</a>
                                 </div>
@@ -93,6 +93,7 @@
                                 </div>
                             </form>
                             <div id="error" class="text-danger mt-2" style="display: none;">Invalid username or password.</div>
+                            <div id="emptyError" class="text-danger mt-2" style="display: none;">Email and password are required.</div>
     
     
                         </div>
