--- a/Documents-page.html
+++ b/Documents-page.html
@@ -22,40 +22,40 @@
 
 <body>
   <!-- header section Start -->
-    <header>
-        <div class="container">
-            <div class=" ms-auto">
-                <ul class=" d-flex justify-content-end align-items-center">
-                    <li><a href="#" class="contact-admin">Contact admin</a></li>
-                    <li class="ms-3">
-                        <div class="dropdown">
+  <header>
+    <div class="container">
+        <div class=" ms-auto">
+            <ul class=" d-flex justify-content-end align-items-center">
+                <li><a href="#" class="contact-admin">Contact admin</a></li>
+                <li class="ms-lg-3 ms-md-3 ms-sm-0">
+                    <div class="dropdown">
 
-                            <div class="  dropdown-toggle user-dropdown" type="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                <div class="user-icon"><img src="assets/img/icon/user.png" alt=""> </div> Welcome Mr.
-                                Persons Name
+                        <div class="  dropdown-toggle user-dropdown" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <div class="user-icon"><img src="assets/img/icon/user.png" alt=""> </div> Welcome Mr.
+                            Persons Name
 
-                            </div>
-                            <ul class="dropdown-menu user-dropdown-menu">
-                                <li><a class="dropdown-item" href="#">View profile</a></li>
-                                <li><a class="dropdown-item" href="#">Edit profile</a></li>
-                                <li><a class="dropdown-item" href="#">View Members</a></li>
-                                <li><a class="dropdown-item" href="#">Country/Community</a></li>
-                                <li><a class="dropdown-item" href="#">Logout</a></li>
-                            </ul>
                         </div>
-                    </li>
-                    <div class="ms-3">
-                        <select class="form-select" aria-label="Default select example">
-                            <option selected>English</option>
-                            <option>English</option>
-                            <option>English</option>
-                        </select>
+                        <ul class="dropdown-menu user-dropdown-menu">
+                            <li><a class="dropdown-item" href="#">View profile</a></li>
+                            <li><a class="dropdown-item" href="#">Edit profile</a></li>
+                            <li><a class="dropdown-item" href="#">View Members</a></li>
+                            <li><a class="dropdown-item" href="#">Country/Community</a></li>
+                            <li><a class="dropdown-item" href="#">Logout</a></li>
+                        </ul>
                     </div>
-                </ul>
-            </div>
+                </li>
+                <div class="ms-lg-3 ms-md-3 ms-sm-0">
+                    <select class="form-select" aria-label="Default select example">
+                        <option selected>English</option>
+                        <option>English</option>
+                        <option>English</option>
+                    </select>
+                </div>
+            </ul>
         </div>
-    </header>
+    </div>
+</header>
     <!-- header section end -->
 
 <div class="sticky-top"> 
@@ -416,7 +416,8 @@
                         <li class="icon"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                         <li class="icon"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
                         <li class="icon"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-                        <li class="icon"><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                                                <li class="icon icon-b"><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+
                     </ul>
                     </div>
                 </div>
