--- a/Quiz-page.html
+++ b/Quiz-page.html
@@ -28,7 +28,7 @@
         <div class=" ms-auto">
             <ul class=" d-flex justify-content-end align-items-center">
                 <li><a href="#" class="contact-admin">Contact admin</a></li>
-                <li class="ms-3">
+                <li class="ms-lg-3 ms-md-3 ms-sm-0">
                     <div class="dropdown">
 
                         <div class="  dropdown-toggle user-dropdown" type="button" data-bs-toggle="dropdown"
@@ -46,7 +46,7 @@
                         </ul>
                     </div>
                 </li>
-                <div class="ms-3">
+                <div class="ms-lg-3 ms-md-3 ms-sm-0">
                     <select class="form-select" aria-label="Default select example">
                         <option selected>English</option>
                         <option>English</option>
@@ -202,7 +202,7 @@
                         <li class="icon"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
                         <li class="icon"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
                         <li class="icon"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-                        <li class="icon"><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                        <li class="icon icon-b"><a href="#"><i class="fa-solid fa-rss"></i></a></li>
                     </ul>
                     </div>
                 </div>
