--- a/Discussion-comments.html
+++ b/Discussion-comments.html
@@ -130,7 +130,7 @@
 
 
     <!-- News-page-section start -->
-    <div class="Discussion-forum-page-section">
+    <div class="Discussion-comments-page-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 order-2 order-lg-1  order-md-1">
@@ -183,111 +183,25 @@
                     </aside>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 order-1 order-lg-2  order-md-2">
-                    <div class="Discussion-right-Section">
-                        <div class="Discussion-table-section">
+                    <div class="Discussion-comments-box">
+                        <div class="dic-comment-head-setion">
+                            <p class="">Title name will come here</p>
+                            <p class="">3 comments <i class="fa-solid fa-comment"></i></p>
+                            <a href="#" class="back-btn ">Back</a>
+                        </div>
+                        <div class="dic-comment-box">
+                            <div class="reviews-box">
+                                <div class="img-section">
+                                <div class="img-reviews-box">
+                                    <img src="assets/img/all/profile.png" alt="">
+                                </div>
+                                </div>
+                                <div class="reviews-chate-box ">
+                                    <p class="name-title">Name will come here <span class="date-post">  Posted on: 08-03-2023 </span></p>
+                                    <p class="Description-text" >Description will come here description will come here description will come here description will come here Description will come here description will come here description will come here </p>
 
-                       
-                        <table class="dic-table" cellspacing="10">
-                            <thead>
-                              <tr>
-                                <th >Sr.no</th>
-                                <th  class="Topic-section">Topic</th>
-                                <th ><i class="fa-solid fa-comment"></i></th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                                <!-- 1 -->
-                              <tr>
-                                <td class="dic-number" scope="row">1</td>
-                                <td>
-                                    <p class="dic-title"><a href="Discussion-comments.html"> Title name will come here </a></p> 
-                                    <p class="dic-date">Created on: 08-03-2023</p>
-                                </td>
-                                <th >40</th>
-                              </tr>
-                              <!-- 2 -->
-                              <tr>
-                                <td class="dic-number" scope="row">2</td>
-                                <td>
-                                    <p class="dic-title"><a href="Discussion-comments.html"> Title name will come here title name will come here title name will come here </a></p>
-                                    <p class="dic-date">Created on: 08-03-2023</p>
-                                </td>
-                                <th >20</th>
-                              </tr>
-                              <!-- 3 -->
-                              <tr>
-                                <td class="dic-number" scope="row">3</td>
-                                <td>
-                                    <p class="dic-title"><a href="Discussion-comments.html"> Title name will come here </a></p>
-                                    <p class="dic-date">Created on: 08-03-2023</p>
-                                </td>
-                                <th >40</th>
-                              </tr>
-                              <!-- 4 -->
-                              <tr>
-                                <td class="dic-number" scope="row">4</td>
-                                <td>
-                                    <p class="dic-title"><a href="Discussion-comments.html"> Title name will come here title name will come here title name will come here </a></p>
-                                    <p class="dic-date">Created on: 08-03-2023</p>
-                                </td>
-                                <th >20</th>
-                              </tr>
-                              <!-- 5 -->
-                              <tr>
-                                <td class="dic-number" scope="row">5</td>
-                                <td>
-                                    <p class="dic-title"><a href="Discussion-comments.html"> Title name will come here </a></p> 
-                                    <p class="dic-date">Created on: 08-03-2023</p>
-                                </td>
-                                <th >40</th>
-                              </tr>
-                              <!-- 6 -->
-                              <tr>
-                                <td class="dic-number" scope="row">6</td>
-                                <td>
-                                    <p class="dic-title"><a href="Discussion-comments.html"> Title name will come here title name will come here title name will come here </a></p>
-                                    <p class="dic-date">Created on: 08-03-2023</p>
-                                </td>
-                                <th >20</th>
-                              </tr>
-                              <!-- 7 -->
-                              <tr>
-                                <td class="dic-number" scope="row">7</td>
-                                <td>
-                                    <p class="dic-title"><a href="Discussion-comments.html"> Title name will come here </a></p> 
-                                    <p class="dic-date">Created on: 08-03-2023</p>
-                                </td>
-                                <th >40</th>
-                              </tr>
-                              <!-- 8 -->
-                              <tr>
-                                <td class="dic-number" scope="row">8</td>
-                                <td>
-                                    <p class="dic-title"><a href="Discussion-comments.html"> Title name will come here title name will come here title name will come here </a></p>
-                                    <p class="dic-date">Created on: 08-03-2023</p>
-                                </td>
-                                <th >20</th>
-                              </tr>
-                              <!-- 9 -->
-                              <tr>
-                                <td class="dic-number" scope="row">9</td>
-                                <td>
-                                    <p class="dic-title"><a href="Discussion-comments.html"> Title name will come here </a></p> 
-                                    <p class="dic-date">Created on: 08-03-2023</p>
-                                </td>
-                                <th >40</th>
-                              </tr>
-                              <!-- 10 -->
-                              <tr>
-                                <td class="dic-number" scope="row">10</td>
-                                <td>
-                                    <p class="dic-title"><a href="Discussion-comments.html"> Title name will come here title name will come here title name will come here </a></p>
-                                    <p class="dic-date">Created on: 08-03-2023</p>
-                                </td>
-                                <th >20</th>
-                              </tr>
-                            </tbody>
-                          </table>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
