--- a/Documents-page.html
+++ b/Documents-page.html
@@ -132,7 +132,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 order-2 order-lg-1  order-md-1">
-                    <aside class="Latest-updates-setion">
+                    <aside class="Latest-updates-section">
                         <div class="latest-box">
                             <h3 class="main-title">Latest updates</h3>
                             <a class="info-title">Document name will come here</a>
