--- a/Quiz-page.html
+++ b/Quiz-page.html
@@ -11,8 +11,10 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
 
-<!-- font-awesome icon link -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- font-awesome icon link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 
@@ -22,114 +24,117 @@
 </head>
 
 <body>
-  <!-- header section Start -->
-  <header>
-    <div class="container">
-        <div class=" ms-auto">
-            <ul class=" d-flex justify-content-end align-items-center">
-                <li><a href="#" class="contact-admin">Contact admin</a></li>
-                <li class="ms-lg-3 ms-md-3 ms-sm-0">
-                    <div class="dropdown">
+    <!-- header section Start -->
+    <header>
+        <div class="container">
+            <div class=" ms-auto">
+                <ul class=" d-flex justify-content-end align-items-center">
+                    <li><a href="#" class="contact-admin">Contact admin</a></li>
+                    <li class="ms-lg-3 ms-md-3 ms-sm-0">
+                        <div class="dropdown">
 
-                        <div class="  dropdown-toggle user-dropdown" type="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            <div class="user-icon"><img src="assets/img/icon/user.png" alt=""> </div> Welcome Mr.
-                            Persons Name
+                            <div class="  dropdown-toggle user-dropdown" type="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                <div class="user-icon"><img src="assets/img/icon/user.png" alt=""> </div> Welcome Mr.
+                                Persons Name
 
+                            </div>
+                            <ul class="dropdown-menu user-dropdown-menu">
+                                <li><a class="dropdown-item" href="#">View profile</a></li>
+                                <li><a class="dropdown-item" href="#">Edit profile</a></li>
+                                <li><a class="dropdown-item" href="#">View Members</a></li>
+                                <li><a class="dropdown-item" href="#">Country/Community</a></li>
+                                <li><a class="dropdown-item" href="#">Logout</a></li>
+                            </ul>
                         </div>
-                        <ul class="dropdown-menu user-dropdown-menu">
-                            <li><a class="dropdown-item" href="#">View profile</a></li>
-                            <li><a class="dropdown-item" href="#">Edit profile</a></li>
-                            <li><a class="dropdown-item" href="#">View Members</a></li>
-                            <li><a class="dropdown-item" href="#">Country/Community</a></li>
-                            <li><a class="dropdown-item" href="#">Logout</a></li>
-                        </ul>
+                    </li>
+                    <div class="ms-lg-3 ms-md-3 ms-sm-0">
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>English</option>
+                            <option>English</option>
+                            <option>English</option>
+                        </select>
                     </div>
-                </li>
-                <div class="ms-lg-3 ms-md-3 ms-sm-0">
-                    <select class="form-select" aria-label="Default select example">
-                        <option selected>English</option>
-                        <option>English</option>
-                        <option>English</option>
-                    </select>
-                </div>
-            </ul>
-        </div>
-    </div>
-</header>
-<!-- header section end -->
-
-<div class="sticky-top"> 
-<!-- nvabar-setion start -->
-<nav class="navbar   nvabar-setion">
-    <div class="container">
-        <a class="navbar-brand "><img src="assets/img/logo/Group 34437@2x.png" alt=""></a>
-        <div class="d-flex">
-            <p class="nav-title"> Imputabiliteafro expert platform </p>
-        </div>
-    </div>
-</nav>
-<!-- nvabar-setion End -->
-<!-- secondary-menu-section start -->
-<div class="navbar navbar-expand-lg secondary-menu-section">
-    <div class="container">
-        <div class="col-lg-4 col-md-4 ">
-            <div class="dropdown  dropdown-section">
-                <div class=" dropdown-toggle dropdown-title " data-bs-toggle="dropdown"
-                    aria-expanded="false">
-                    <span>  Select Spaces </span>
-                    <span class="ms-auto icon-box"><iconify-icon 
-                            icon="teenyicons:up-solid" class="up-down-arro"></iconify-icon></span>
-                </div>
-                <ul class="dropdown-menu ">
-                    <li><a class="dropdown-item" href="#">Global </a></li>
-                    <li><a class="dropdown-item" href="#">Community 1</a></li>
-                    <li><a class="dropdown-item" href="#">Algeria</a></li>
                 </ul>
             </div>
         </div>
-        <div class="navbar-toggler " data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <!-- <span class="navbar-toggler-icon"></span> -->
-            <iconify-icon icon="ci:menu-alt-05"></iconify-icon>
-        </div>
-        <div class="collapse navbar-collapse col-lg-8" id="navbarSupportedContent">
-            <ul class="navbar-nav menu-iteam  mb-2 mb-lg-0 ">
+    </header>
+    <!-- header section end -->
 
-                <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="Documents-page.html">
-                        <div class="logo-img"><i class="fa-solid fa-book"></i></div><span> Documents
-                        </span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="News-page.html"><div class="logo-img"> <i class="fa-solid fa-newspaper"></i></div><span> News</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="Event-page.html"><div class="logo-img"> <i class="fa-solid fa-location-dot"></i></div><span>
-                            Events</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Discussion-page.html">
-                        <div class="logo-img"><i class="fa-solid fa-comments"></i></div><span> Discussion
-                            forum</span>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="Quiz-page.html">
-                        <div class=" logo-img"><i class="fa-solid fa-chart-simple"></i></div><span> Quiz</span>
-                    </a>
-                </li>
-            </ul>
+    <div class="sticky-top">
+        <!-- nvabar-setion start -->
+        <nav class="navbar   nvabar-setion">
+            <div class="container">
+                <a class="navbar-brand "><img src="assets/img/logo/Group 34437@2x.png" alt=""></a>
+                <div class="d-flex">
+                    <p class="nav-title"> Imputabiliteafro expert platform </p>
+                </div>
+            </div>
+        </nav>
+        <!-- nvabar-setion End -->
+        <!-- secondary-menu-section start -->
+        <div class="navbar navbar-expand-lg secondary-menu-section">
+            <div class="container">
+                <div class="col-lg-4 col-md-4 ">
+                    <div class="dropdown  dropdown-section">
+                        <div class=" dropdown-toggle dropdown-title " data-bs-toggle="dropdown" aria-expanded="false">
+                            <span> Select Spaces </span>
+                            <span class="ms-auto icon-box"><iconify-icon icon="teenyicons:up-solid"
+                                    class="up-down-arro"></iconify-icon></span>
+                        </div>
+                        <ul class="dropdown-menu ">
+                            <li><a class="dropdown-item" href="#">Global </a></li>
+                            <li><a class="dropdown-item" href="#">Community 1</a></li>
+                            <li><a class="dropdown-item" href="#">Algeria</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="navbar-toggler " data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <!-- <span class="navbar-toggler-icon"></span> -->
+                    <iconify-icon icon="ci:menu-alt-05"></iconify-icon>
+                </div>
+                <div class="collapse navbar-collapse col-lg-8" id="navbarSupportedContent">
+                    <ul class="navbar-nav menu-iteam  mb-2 mb-lg-0 ">
 
+                        <li class="nav-item">
+                            <a class="nav-link " aria-current="page" href="Documents-page.html">
+                                <div class="logo-img"><i class="fa-solid fa-book"></i></div><span> Documents
+                                </span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="News-page.html">
+                                <div class="logo-img"> <i class="fa-solid fa-newspaper"></i></div><span> News</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link " href="Event-page.html">
+                                <div class="logo-img"> <i class="fa-solid fa-location-dot"></i></div><span>
+                                    Events</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Discussion-page.html">
+                                <div class="logo-img"><i class="fa-solid fa-comments"></i></div><span> Discussion
+                                    forum</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="Quiz-page.html">
+                                <div class=" logo-img"><i class="fa-solid fa-chart-simple"></i></div><span> Quiz</span>
+                            </a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
         </div>
+        <!-- secondary-menu-section End -->
     </div>
-</div>
-<!-- secondary-menu-section End -->
-</div>
 
 
-    <div class="News-page-section">
+    <div class="Quiz-page-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 order-2 order-lg-1  order-md-1">
@@ -182,7 +187,109 @@
                     </aside>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 order-1 order-lg-2  order-md-2">
-                    
+                    <div class="Quiz-right-section">
+                        <div class="Quiz-que-box">
+                            <div class="Quiz-title">
+                                <p><a href="">Single choice question will some here</a></p>
+                            </div>
+                            <form action="">
+                                <div class="input-box">
+
+                                    <input class="" type="radio" id="Answer 1" name="answer" value="Answer 1">
+                                    <label for="Answer 1" class="col-11">Answer 1 will come here answer 1 Answer 1 will
+                                        come here
+                                        answer</label><br>
+                                </div>
+                                <div class="input-box">
+
+                                    <input type="radio" id="Answer 2" name="answer" value="Answer 2">
+                                    <label class="col-11" for="Answer 2">Answer 1 will come here answer 1</label><br>
+                                </div>
+                                <div class="input-box">
+                                    <input type="radio" id="Answer 3" name="answer" value="Answer 3">
+                                    <label for="Answer 3" class="col-11">Answer 1 will come here answer 1</label><br>
+                                </div>
+                                <div class="input-box">
+                                    <input type="radio" id="Answer 4" name="answer" value="Answer 4">
+                                    <label for="Answer 4" class="col-11">Answer 1 will come here answer 1</label><br>
+                                </div>
+
+
+                                <button>Submit</button>
+                            </form>
+
+                        </div>
+                        <!-- 2 -->
+                        <div class="Quiz-que-box">
+                            <div class="Quiz-title">
+                                <p><a href="">True/False question will come here</a></p>
+                            </div>
+                            <form action="">
+                                <div class=" input-box">
+                                    <input type="radio" id="True" name="answer" value="True">
+                                    <label for="True" class="col-11">True</label><br>
+                                </div>
+                                <div class="input-box">
+                                    <input type="radio" id="False" name="answer" value="False">
+                                    <label for="False" class="col-11">False</label><br>
+                                </div>
+
+                                <button>Submit</button>
+                            </form>
+
+                        </div>
+                        <!-- 3 -->
+                        <div class="Quiz-que-box">
+                            <div class="Quiz-title">
+                                <p><a href="">Multiple choice question will come here</a></p>
+                            </div>
+                            <form action="">
+                                <div class="input-box">
+
+                                    <input type="checkbox" id="Answer 5" name="answer" value="Answer 5">
+                                    <label for="Answer 5" class="col-11">Answer 1 will come here answer 1 Answer 1 will
+                                        come here
+                                        answer</label><br>
+                                </div>
+                                <div class="input-box">
+
+                                    <input type="checkbox" id="Answer 6" name="answer" value="Answer 6">
+                                    <label for="Answer 6" class="col-11">Answer 1 will come here answer 1</label><br>
+                                </div>
+                                <div class="input-box">
+
+                                    <input type="checkbox" id="Answer 7" name="answer" value="Answer 7">
+                                    <label for="Answer 7" class="col-11">Answer 1 will come here answer 1</label><br>
+                                </div>
+                                <div class="input-box">
+
+                                    <input type="checkbox" id="Answer 8" name="answer" value="Answer 8">
+                                    <label for="Answer 8" class="col-11">Answer 1 will come here answer 1</label><br>
+                                </div>
+                                <button>Submit</button>
+                            </form>
+                        </div>
+                        <!-- 4 -->
+                        <div class="Quiz-que-box">
+                            <div class="Quiz-title">
+                                <p><a href="">True/False question will come here</a></p>
+                            </div>
+                            <form action="">
+                                <div class="input-box">
+
+                                    <input type="radio" id="Yes" name="answer" value="Yes">
+                                    <label for="Yes" class="col-11"> Yes</label><br>
+                                </div>
+                                <div class="d-flex  align-baseline">
+                                    <input type="radio" id="No" name="answer" value="No">
+                                    <label for="No" class="col-11">No</label><br>
+                                </div>
+
+                                <button>Submit</button>
+                            </form>
+
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -193,17 +300,17 @@
             <div class="d-flex align-items-center justify-content-between">
                 <div class="col-lg-4 col-md-4 col-sm-6 ">
                     <div class="text-center">
-                    <a href="#" class="connect-info">Connect with us</a>
-                </div>
+                        <a href="#" class="connect-info">Connect with us</a>
+                    </div>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-6">
                     <div>
-                    <ul class="footer-icon-box">
-                        <li class="icon"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                        <li class="icon"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                        <li class="icon"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-                        <li class="icon icon-b"><a href="#"><i class="fa-solid fa-rss"></i></a></li>
-                    </ul>
+                        <ul class="footer-icon-box">
+                            <li class="icon"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                            <li class="icon"><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                            <li class="icon"><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                            <li class="icon icon-b"><a href="#"><i class="fa-solid fa-rss"></i></a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
