--- a/Discussion-comments.html
+++ b/Discussion-comments.html
@@ -42,7 +42,7 @@
                             <ul class="dropdown-menu user-dropdown-menu">
                                 <li><a class="dropdown-item" href="#">View profile</a></li>
                                 <li><a class="dropdown-item" href="#">Edit profile</a></li>
-                                <li><a class="dropdown-item" href="#">View Members</a></li>
+                                <li><a class="dropdown-item" href="Members-page.html">View Members</a></li>
                                 <li><a class="dropdown-item" href="#">Country/Community</a></li>
                                 <li><a class="dropdown-item" href="#">Logout</a></li>
                             </ul>
