--- a/Members-detailed.html
+++ b/Members-detailed.html
@@ -77,7 +77,7 @@
                 <div class="col-lg-4 col-md-4 ">
                     <div class="dropdown  dropdown-section">
                         <div class=" dropdown-toggle dropdown-title " data-bs-toggle="dropdown" aria-expanded="false">
-                            <span> Select Spaces </span>
+                            <span> Algeria </span>
                             <span class="ms-auto icon-box"><iconify-icon icon="teenyicons:up-solid"
                                     class="up-down-arro"></iconify-icon></span>
                         </div>
@@ -199,11 +199,11 @@
                                         <p class="title-text">Members name</p>
                                     </div>
                                     <div class="row">
-                                        <div class="col-lg-6 col-md-6 col-sm-12">
+                                        <div class="col-lg-6 col-md-12 col-sm-12">
                                             <div class="e-mail-section"><i class="fa-regular fa-envelope"></i> <a
                                                     href="#">email@example.com</a> </div>
                                         </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-12">
+                                        <div class="col-lg-6 col-md-12 col-sm-12">
                                             <div>
                                                 <div class="e-mail-section"><i class="fa-regular fa-envelope"></i> <a
                                                         href="#">email@example.com</a></div>
@@ -214,7 +214,7 @@
                                     </div>
 
                                     <div class="row">
-                                        <div class="col-lg-6 col-md-6 col-sm-12">
+                                        <div class="col-lg-6 col-md-12 col-sm-12">
                                             <div class="link-body">
                                                 <a href="#">Region 1 name will come here</a>
                                             </div>
@@ -222,7 +222,7 @@
                                                 <a href="#">Country name</a>
                                             </div>
                                         </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-12">
+                                        <div class="col-lg-6 col-md-12 col-sm-12">
                                             <div class="link-body">
                                                 <a href="#">Global</a>
                                             </div>
@@ -231,10 +231,24 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="">
-                            
-                        </div>
 
+                        <div class=" member-box row ">
+                            <p class="col-lg-3 col-md-4 col-sm-12 first-title">Expertise</p>
+                            <p class="col-lg-9 col-md-8 col-sm-12 second-p">Pharmacy; General medicine; Anesthesia-resuscitation; Cardiology; Communication; Humanitarian; Para medical</p>
+                        </div>
+                        <div class=" member-box row ">
+                            <p class="col-lg-3 col-md-4 col-sm-12 first-title">Profile</p>
+                            <p class="col-lg-9 col-md-8 col-sm-12 second-p">Expert Committee; ANR; Health Program</p>
+                        </div>
+                        <div class="member-contain">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis impedit quo quia reprehenderit ducimus rem perferendis magnam reiciendis provident iusto dolorum dicta laboriosam, nulla earum quod sint iste recusandae facilis?</p>
+                        </div>
+                        <div class="member-contain">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis impedit quo quia reprehenderit ducimus rem perferendis magnam reiciendis provident iusto dolorum dicta laboriosam, nulla earum quod sint iste recusandae facilis?</p>
+                        </div>
+                        <div class="btn-section">
+                            <button onclick="window.location='./Members-page.html';"> Back to members</button>
+                        </div>
                     </div>
                 </div>
             </div>
